# omni-llm

./: .gitignore  BRANCH_CLEANUP_REPORT.md  CHANGELOG.md  CLEANUP_INSTRUCTIONS.md  COMPLETION_SUMMARY.md  CONTEXT.md  DEMO_IMPLEMENTATION_SUMMARY.md  GITHUB_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  P2-11-ARCHITECTURE.md  P2-11-REVIEW.md  PHASE2_PLAN.md  README-worktree.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT_P2-02.md  SOUL.md  create_private_repo.sh  pr_body.json  pr_body_p2-16.txt  pyproject.toml  pytest.ini  setup_github_repo.sh  simple_test.py  test.py  test_actual_code.py  test_comprehensive_git.py  test_cost_tracker.py  test_edge_cases.py  test_edit_cycle_workflow.py  test_editloop_git.py  test_editloop_git_detailed.py  test_feature_branch.py  test_git_integration_final.py  test_integration.py  test_litellm_adapter.py  test_modelprovider_interface.py  test_mutable_default.py  test_provider_config.py  (+5 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
configs/: budget.yaml  models.yaml  providers.yaml  verifiers.yaml
docs/: LLMTASKEXECUTOR.md  P2-14-ARCHITECTURE.md  P2-15-ARCHITECTURE.md  P2-16-ARCHITECTURE.md  P2-16-ORIGINAL-ARCHITECTURE.md  PREDICTIVE_MODULE.md  README.md  SCHEDULE_ADJUSTER.md  SCHEDULING_POLICIES.md  coordination-engine.md  demo_command.md  execution-engine.md  health-monitoring.md  models_commands.md  orchestration.md  result-integrator.md  scheduling-architecture.md  scheduling-overview.md  setup_wizard.md  workflow-orchestration.md  workflow-templates.md  worktree-manager.md
examples/: coordination_example.py  editloop_mutable_default_demo.py  health_monitoring_example.py  integrator_example.py  llm_executor_demo.py  models_add_example.py  multi_agent_parallel.py  mutable_default_demo.py  observability_demo.py  predictive_module_usage.py  resource_pool_demo.py  schedule_adjuster_demo.py  scheduling_demo.py  scheduling_policies_example.py  setup_demo.py  simple_workflow.py  single_agent_with_routing.py  task_graph_visualization.py  verifier_usage.py  workflow_demo.py  workflow_example.py  workflow_from_template.py  workflow_integration_demo.py  worktree_example.py
scripts/: delete_merged_branches.sh
tests/: simple_test.py  test_budget.py  test_cli_models.py  test_complexity_analyzer.py  test_conflict_resolver.py  test_context_scanner.py  test_cost_optimized.py  test_cost_tracker.py  test_decomposition.py  test_decomposition_visualizer.py  test_demo.py  test_edit_applier.py  test_edit_loop.py  test_editblock.py  test_execution_config.py  test_execution_db.py  test_execution_engine.py  test_execution_executor.py  test_execution_models.py  (+33 more)
(+129 files in other folders)
